--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "hls.js": "^1.6.15",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^3.0.2",
